# Codes

./: .gitignore
python/: add.py  app.py  bin_dec.py  data.json  data_train.json  database.py  db.py  def_practice.py  example.json  movie_downloader.py  mylang  pkgs.txt  polygan.py  program.py  pyproject.toml  set_1.py  student.db  student.db-journal  text.txt
python/100_days_of_code/: pyproject.toml
python/100_days_of_code/day33/: kanye_machine.py
python/99_problems/: 01.py
python/DataScience/: Modelling_Original.ipynb  Modelling_Test.ipynb
python/algo_fa/: ex_01.py  ex_02.py  ex_03.py  ex_04.py  ex_05.py  ex_06.py  ex_07.py  ex_08.py  ex_09.py  ex_10.py  ex_11.py  ex_12.py
python/aoc2023/day_01/: res.py  sol.py
python/aoc2023/day_02/: sol.py
python/cbar/: cbar.py  force.py  table.py  testlib.py  utils.py
python/codewars/: balance_arr.py  moving_zero.py  rgb_to_hex.py
python/db_work/: csv_work.py  data.csv
python/designpattern/: singleton.py
python/django/dj3_by_ex/: pyproject.toml
python/django/django_class/: pyproject.toml
python/django/khalili/: db.sqlite3  manage.py
python/django/studybud/: db.sqlite3  pyproject.toml
python/ds/: 3dexample.py  MatPlotLibExample.ipynb  Untitled.ipynb  custom_shaded_3d_surface.ipynb  ds_notebook.ipynb  matplotlibe_example.py  pyproject.toml
python/ds/db_work/: program.py  (+1 more)
python/dump/: Untitled-1.py  add.py  afile.py  animal_quiz.py  aoc1.py  area.py  bagels.py  bbm.py  bin_dec.py  books.txt  build_set.py  calc.py  ch_passwd_strength.py  chrord.py  code1.py  code_exec.py  coll.py  configkey.py  contact.py  decimal_to_binary.py  dict_work.py  dtmerge.py  dumpcode.py  even.py  f2.py  fib.py  find_by_location.py  form.py  functions.py  gd.py  gen_name.py  guessing_game_2.py  hashtag.py  hello.py  hellowold.py  ifx.py  indentation_error.py  index.html  input.txt  ip_valid.py  (+32 more)
python/examples/: hfn.py  hint.py
python/exercises/: bin_series.py
python/for_insta/: filter_people.py  unpack.py
python/game_dev/: pyproject.toml  run.py
python/h/: 2.2.py  3.3.py  4.2.py  E2.2.py  E4.1.py
python/insta/: char_counter.py  char_occur.py  colorscheme.py  dimond.py  fonts_showcase.py  guessing_game.py  is_square.py  iseven.py  login_form.py  merge_words.py  python_dict.py  shapes.py  shortes_word.py  time_execu.py  vowel.py
python/ketab/: add.py  delete.py  remove_rent.py  rents.txt
python/routin_maker/: routine.py
python/rsp_decode/: main.py
python/scripts/: download_pics.py  hello.py  index.html  rename_pics.py
python/telegram_bot/: bot.py  pyproject.toml
python/think_python/: func.py
python/tk/: calculator.py  entry.py  example.py  hellotk.py  listbox.py  person.py  radio.py  sample_window.py  test_style.py  tk_byex_ch02.py
python/tkbyex/: blackjack.py
python/toml_example/: config.toml  working.py
(+365 files in other folders)
