[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Saeed Gholami <saeed.ghollami@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pygame = "^2.3.0"
pandas = "^2.0.2"
jupyterlab = "^4.0.2"
matplotlib = "^3.7.1"
scipy = "^1.10.1"
tqdm = "^4.65.0"
scikit-learn = "^1.2.2"
imageio = "^2.31.1"
basemap = "^1.3.7"
notebook = "^7.0.3"
seaborn = "^0.12.2"
django = "^4.2.6"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.2"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
